update story homepage layout

--- a/all_collections/story/act-1/2022-10-07/_posts/2022-10-07-recap.md
+++ b/all_collections/story/act-1/2022-10-07/_posts/2022-10-07-recap.md
@@ -3,7 +3,9 @@ title: The First Heist
 tags: session-recap
 ---
 
-The Nameless first made their presence known by interrupting a covert handoff between a group of [Deathlands Scavengers](/wiki/factions#deathlands-scavengers) and a [Spirit Warden](/wiki/factions#spirit-wardens). The artifact, a clockwork head, was also the target of the [Wraiths](/wiki/factions#wraiths), another notable gang of thieves with a penchant for hand signals and perfect coordination. The Nameless returned the head to their contact, [Lord Scurlock](/wiki/lord-scurlock), who received it gratefully.
+The Nameless first made their presence known by interrupting a covert handoff between a group of [Deathlands Scavengers](/wiki/factions#deathlands-scavengers) and a [Spirit Warden](/wiki/factions#spirit-wardens). 
+
+The artifact, a clockwork head, was also the target of the [Wraiths](/wiki/factions#wraiths), another notable gang of thieves with a penchant for hand signals and perfect coordination. The Nameless returned the head to their contact, [Lord Scurlock](/wiki/lord-scurlock), who received it gratefully.
 
 In the process of stealing the head, the Nameless managed to reveal the Spirit Warden's identity as [Cassiopeia Beasby](/wiki/npcs#cassiopeia-beasby), a moderately-notorious socialite. As anonymity is a major calling card of the Spirit Wardens, Ms. Beasby was dismissed in short order. 
 
