story formatting updates

--- a/all_collections/story/act-1/2022-11-17/_posts/2022-11-17-recap.md
+++ b/all_collections/story/act-1/2022-11-17/_posts/2022-11-17-recap.md
@@ -2,4 +2,5 @@
 title: "Katya & Arkin's Wild Ride"
 tag: session-recap
 ---
-There is currently no summary for this session, but there is "fluff"! 
+
+Arkin and Katya team up with Lugos and inadvertently start a war.
