--- a/all_collections/story/act-2/2023-01-05/_posts/2023-01-05-recap.md
+++ b/all_collections/story/act-2/2023-01-05/_posts/2023-01-05-recap.md
@@ -3,4 +3,4 @@ title: Void Sea Massacre
 date: 2023-01-05
 tag: session-recap
 ---
-There is currently no summary for this session, but there is "fluff"! 
+The Nameless defend their newly acquired wrestling venue from the Gray Cloaks and an eight-foot tall knight.
