--- a/all_collections/story/act-2/2023-01-17/_posts/2023-01-17-recap.md
+++ b/all_collections/story/act-2/2023-01-17/_posts/2023-01-17-recap.md
@@ -3,7 +3,9 @@ title: The Shmeet-Up
 tag: session-recap
 ---
 
-To keep from having to wholesale slaughter the [Gray Cloaks](/wiki/factions#graycloaks), the Nameless agreed to ambush City Councilmember, Leviathan Hunter super-owner, and their erstwhile bankroller [Lord Strangford](/wiki/npcs#lord-strangford). Strangford had been under investigation by the Gray Cloaks JUST before they were wrongfully kicked out of the force, and it was decided that his death would close the book on the gang war.
+To keep from having to wholesale slaughter the [Gray Cloaks](/wiki/factions#graycloaks), the Nameless agreed to ambush City Councilmember, Leviathan Hunter super-owner, and their erstwhile bankroller [Lord Strangford](/wiki/npcs#lord-strangford).
+
+Strangford had been under investigation by the Gray Cloaks JUST before they were wrongfully kicked out of the force, and it was decided that his death would close the book on the gang war.
 
 The ambush was set up in [Brightstone's](/wiki/brightstone) Unity Park, with cover provided by organizing a fight between noted wrestler Red Hot Dan Houston and teenage dumbass [Jeremy "the Shmeek" Pendryn](/wiki/npcs#jeremy-pendryn). 
 
