--- a/all_collections/story/act-4/2023-06-08/_posts/2023-06-08-recap.md
+++ b/all_collections/story/act-4/2023-06-08/_posts/2023-06-08-recap.md
@@ -2,6 +2,7 @@
 title: The Madman's Assault
 tag: session-recap
 ---
+To distance the gang from culpability in the Duskvol Ironworks explosion, [Arkin](/arkin) goes on a rampage at Charterhall University. Scurlock and Lugos have an unfortunate encounter with the Cult of Vazara.
 
 To exonerate [Katya](/wiki/katya) from her potential loss of position and to distance the gang from culpability in the Duskvol Ironworks explosion, [Arkin](/wiki/arkin) pretended to go after the President of Charterhall University so that Katya could "kill" him. [Arcade](/wiki/arcade) and Katya emerged as heroes of the hour, and Arkin implied that he was solely responsible for the Ironworks explosion before being "slain".
 
