--- a/all_collections/story/act-4/2023-08-10/_posts/2023-08-10-recap.md
+++ b/all_collections/story/act-4/2023-08-10/_posts/2023-08-10-recap.md
@@ -2,10 +2,13 @@
 title: "Broken"
 tag: session-recap
 ---
-1 . Fake-heist the book and banner. Coat the banner with flubber. Ready a fake book.   
-2 . Plan to ambush [Breaker](/wiki/npcs#setarra) while ALSO stumbling into [Casta](/wiki/npcs#casta) and [Scurlock](/wiki/lord-scurlock)’s planned ambush of Breaker.   
-3 . Having distracted Breaker with a lightning duel, unleash an [ancient demigod](/wiki/npcs#the-horned-one). Bounce the flubber banner.    
-4 . Let off a bunch of electroplasmic grenades.    
-5 . Replace the book with a fake.    
-6 . Get Mousely to pilot Rahz and take back [Arkin](/wiki/arkin)’s soul juice.   
-7 . Escape!
+
+The Nameless kill Breaker with the help of some supernatural allies.
+
+1. Fake-heist the book and banner. Coat the banner with flubber. Ready a fake book.   
+2. Plan to ambush [Breaker](/wiki/npcs#setarra) while ALSO stumbling into [Casta](/wiki/npcs#casta) and [Scurlock](/wiki/lord-scurlock)’s planned ambush of Breaker.   
+3. Having distracted Breaker with a lightning duel, unleash an [ancient demigod](/wiki/npcs#the-horned-one). Bounce the flubber banner.    
+4. Let off a bunch of electroplasmic grenades.    
+5. Replace the book with a fake.    
+6. Get Mousely to pilot Rahz and take back [Arkin](/wiki/arkin)’s soul juice.   
+7. Escape!
