--- a/all_collections/story/act-5/2023-09-05/_posts/2023-09-05-recap.md
+++ b/all_collections/story/act-5/2023-09-05/_posts/2023-09-05-recap.md
@@ -3,7 +3,9 @@ title: Mend Fences, Swing Clubs
 tag: session-recap
 ---
 
-The Nameless faked a lightning wall incident and made [Captain Clelland](/wiki/npcs#morgan-clelland) and [Erin](/wiki/npcs#erin) of the [Billhooks](/wiki/billhooks) look like heroes of the hour WHILE ALSO doing an Inconvenient Truth. The Billhooks are financially embedded into the fabric of V-Sea-W and their civil war is over, with Erin as acting leader. [Coran](/wiki/npcs#coran) of the Billhooks has encountered [Super Saiyan Goose](/wiki/npcs#the-horned-one) and subsequently suffered ego death.
+The Nameless faked a lightning wall incident and made [Captain Clelland](/wiki/npcs#morgan-clelland) and [Erin](/wiki/npcs#erin) of the [Billhooks](/wiki/billhooks) look like heroes of the hour WHILE ALSO doing an Inconvenient Truth. 
+
+The Billhooks are financially embedded into the fabric of V-Sea-W and their civil war is over, with Erin as acting leader. [Coran](/wiki/npcs#coran) of the Billhooks has encountered [Super Saiyan Goose](/wiki/npcs#the-horned-one) and subsequently suffered ego death.
 
 As a bonus, the Nameless struck up a financial relationship with the [Fog Hounds](/wiki/factions#fog-hounds) smugglers, and the [Lampblacks](/wiki/factions#lampblacks) are now under increased police scrutiny.
 
