--- a/all_collections/story/act-5/2023-10-05/_posts/2023-10-05-recap.md
+++ b/all_collections/story/act-5/2023-10-05/_posts/2023-10-05-recap.md
@@ -3,4 +3,6 @@ title: Alduaria, by François
 tag: session-recap
 ---
 
-Upon learning that the newly opened [Deckherd Hall](/wiki/six-towers#deckherd-hall) was to feature [Chef François](/wiki/npcs#francois), his rival [Giancarlo](/wiki/npcs#giancarlo) asked the Nameless to intervene. In order to discredit and humiliate François, the Nameless, led by [Sandro](/wiki/sandro) and [Flan](/wiki/flan), presided over a takeover of the restaurant by the wrestlers of V-Sea-W with the intent of staging a widespread incident of food poisoning. [Sizzle](/wiki/sizzle) helped [Cruncho](/wiki/cruncho) distract [Bea](/wiki/npcs#bea), François's sous chef, while [Linmer](/wiki/linmer) confronted François. The discovery and subsequent destruction of François's haunted meat grinder (not a euphemism) and an explosion of hagfish slime ultimately resulted in the deaths of François and Bea, with Bea's ghost posessing François' corpse.
+Upon learning that the newly opened [Deckherd Hall](/wiki/six-towers#deckherd-hall) was to feature [Chef François](/wiki/npcs#francois), his rival [Giancarlo](/wiki/npcs#giancarlo) asked the Nameless to intervene. 
+
+In order to discredit and humiliate François, the Nameless, led by [Sandro](/wiki/sandro) and [Flan](/wiki/flan), presided over a takeover of the restaurant by the wrestlers of V-Sea-W with the intent of staging a widespread incident of food poisoning. [Sizzle](/wiki/sizzle) helped [Cruncho](/wiki/cruncho) distract [Bea](/wiki/npcs#bea), François's sous chef, while [Linmer](/wiki/linmer) confronted François. The discovery and subsequent destruction of François's haunted meat grinder (not a euphemism) and an explosion of hagfish slime ultimately resulted in the deaths of François and Bea, with Bea's ghost posessing François' corpse.
