--- a/all_collections/story/act-6/2023-11-02/_posts/2023-11-02-recap.md
+++ b/all_collections/story/act-6/2023-11-02/_posts/2023-11-02-recap.md
@@ -2,13 +2,15 @@
 title: Throw the Match
 tag: session-recap
 ---
+The Gang Fakes a Loss of V-Sea-W. Bodies are planted, and the wrestlers are on board but they’re gonna wanna unionize after. V-Sea-W has been classified as a historical landmark.
+
 [V-Sea-W](/wiki/v-sea-w) has several dozen ex-Imperial Soldiers on the premesis, turning away wrestlers and getting ready for war. 
 
 There’s some kind of ghostly . . . Thing . . . Around the electroplasmic infrastructure of [Six Towers](/wiki/six-towers) in a 3-block radius of V-Sea-W.
 
 The [Billhooks](/wiki/billhooks) were approached by [7th Tower](/wiki/seventh-tower) because they are less entrenched in Six Towers and a more feasible option. The Billhooks sold you out for cold hard cash.
 
-The Gang Fakes a Loss of V-Sea-W. Bodies are planted, and the wrestlers are on board but they’re gonna wanna unionize after. V-Sea-W has been classified as a historical landmark
+The Gang Fakes a Loss of V-Sea-W. Bodies are planted, and the wrestlers are on board but they’re gonna wanna unionize after. V-Sea-W has been classified as a historical landmark.
 
 Construction materials have been sabotaged for Seventh Tower Consortium   
 
