--- a/all_collections/story/act-6/2023-12-14/_posts/2023-12-13-intro.md
+++ b/all_collections/story/act-6/2023-12-14/_posts/2023-12-13-intro.md
@@ -3,8 +3,8 @@ title: ""
 tag: fluff
 ---
 
-The gloves are off. The Seventh Tower Consortium is well and truly pissed with the Nameless, who are still standing strong and literally at the same level of prestige and strength as they were at the start of this war, DESPITE taking an ostensible big loss at the beginning. 
+The gloves are off. The Seventh Tower Consortium is well and truly pissed with the Nameless, who are still standing strong and literally at the same level of prestige and strength as they were at the start of this war, DESPITE taking an [ostensible big loss](/story/act-6/2023-11-02) at the beginning. 
 
-Meanwhile, they have been humiliated and rebuffed at every turn. Deckherd Hall was visibly attacked and scarred. V-Sea-W does not have a replacement. The Nameless's contacts continue to give them a cold shoulder. They are nowhere CLOSE to their organizational goals.
+Meanwhile, they have been humiliated and rebuffed at every turn. Deckherd Hall was [visibly attacked and scarred](/story/act-6/2023-11-16). V-Sea-W does not have a replacement. The Nameless's contacts continue to give them a cold shoulder. They are nowhere CLOSE to their organizational goals.
 
 So, next time, they're going all in. Old Meachum's Hagfish Farm is the target.
