--- a/all_collections/story/act-6/2024-01-11/_posts/2024-01-11-recap.md
+++ b/all_collections/story/act-6/2024-01-11/_posts/2024-01-11-recap.md
@@ -3,7 +3,7 @@ title: The Crash
 tag: session-recap
 ---
 
--The infant Duskvol Palisade Avenue stock exchange was blown up and subsequently mashed through thanks to a superhuman Black Knight vs. half-possessed warlock vs. brick shithouse pit-fighter brawl (s/o [Cruncho](/wiki/Cruncho) and [Spud](/wiki/spud)).
+The infant Duskvol Palisade Avenue stock exchange was blown up and subsequently mashed through thanks to a superhuman Black Knight vs. half-possessed warlock vs. brick shithouse pit-fighter brawl (s/o [Cruncho](/wiki/Cruncho) and [Spud](/wiki/spud)).
 
 -The proposed gala celebrating its unveiling became a nightmare riot courtesy of our gang, [the Shmeek](/wiki/npcs#jeremy-pendryn), explosions, and shouting "fire" in a crowded room (tandem work from [Arkin](/wiki/arkin), [Linmer](/wiki/linmer), and [Sandro](/wiki/sandro)).
 
