--- a/all_collections/story/act-7/2024-02-06/_posts/2024-02-06-recap.md
+++ b/all_collections/story/act-7/2024-02-06/_posts/2024-02-06-recap.md
@@ -3,7 +3,9 @@ title: Too Many Cooks, LLC
 tag: session-recap
 ---
 
-The Nameless wanted [Deckherd Hall](/wiki/six-towers#deckherd-hall) to be the home of the reopened [V-Sea-W](/wiki/v-sea-w)! The problem is, Deckherd Hall was tied up in the police investigations into the whole-ass [Seventh Tower](/wiki/seventh-tower) thing (including the discovery that it had been fraudulently acquired in the first place). There being no immediate living heir to the Deckherd name, the hall was set to go up for auction upon the conclusion of the investigation.
+The Nameless wanted [Deckherd Hall](/wiki/six-towers#deckherd-hall) to be the home of the reopened [V-Sea-W](/wiki/v-sea-w)! The problem is, Deckherd Hall was tied up in the police investigations into the whole-ass [Seventh Tower](/wiki/seventh-tower) thing (including the discovery that it had been fraudulently acquired in the first place). 
+
+There being no immediate living heir to the Deckherd name, the hall was set to go up for auction upon the conclusion of the investigation.
 
 But WHO else wanted Deckherd Hall, WHY did they want it, and HOW did the Nameless suborn them?
 
