--- a/all_collections/story/act-6/2023-12-14/_posts/2023-12-14-recap.md
+++ b/all_collections/story/act-6/2023-12-14/_posts/2023-12-14-recap.md
@@ -2,12 +2,11 @@
 title: "The Battle That Wasn't"
 tag: session-recap
 ---
-
-[Old Meachum](/wiki/npcs#old-meachum) is dead, but the hagfish farm survived being burned to the ground!
+Squads of ex-Marines with all kinds of heavy weaponry and artillery were deployed by [Seventh Tower](/wiki/seventh-tower) to destroy Old Meachum's hagfish farm. Their plan was to flank around through the Deathlands, come up through a service entry in the Lightning Wall, and then blow the place to hell. They got 2/3 of the way there, but then . . . well, the Nameless happened.
 
 *Oh wow! Must've been quite a battle!*
 
-So, funny you should say that . . . There wasn't a battle, exactly. Oh, there was an invasion planned, to be sure! Squads of ex-Marines with all kinds of heavy weaponry and artillery were deployed by [Seventh Tower](/wiki/seventh-tower). Their plan was to flank around through the Deathlands, come up through a service entry in the Lightning Wall, and then blow the place to hell. They got 2/3 of the way there, but then . . . well, the Nameless happened.
+So, funny you should say that . . . There wasn't a battle, exactly. Oh, there was an invasion planned, to be sure! 
 
 *Gotcha. Was it ghosts? Soup? Hagfish? Drugs?*
 
@@ -33,7 +32,7 @@ So, Orianna and Cruncho make their way into the ghost field to discover that the
 
 *That sounds like it could be a bad time, sure. So, the Nameless charged in to stop them?*
 
-Ish. Orianna couldn't resist the chance to do a bit of ghost field archaeology to try and get a sense of what kind of presences were around before the Calamity. She got extremely un/lucky and opened herself to a POWERFUL new presence. Does the name "[Vazara](/wiki/npcs#vazara)" mean anything to you? Look it up in ⁠fluff-and-nonsense if not. Anyway, Orianna was briefly incapacitated by Vazara's new influence, leaving Cruncho alone in the ghost field.
+Ish. Orianna couldn't resist the chance to do a bit of ghost field archaeology to try and get a sense of what kind of presences were around before the Calamity. She got extremely un/lucky and opened herself to a POWERFUL new presence. Does the name "[Vazara](/wiki/npcs#vazara)" mean anything to you? Anyway, Orianna was briefly incapacitated by Vazara's new influence, leaving Cruncho alone in the ghost field.
 
 *Oh dang! What did Cruncho do?*
 
