fix story links for act I

--- a/all_collections/story/act-1/2022-10-07/_posts/2022-10-07-recap.md
+++ b/all_collections/story/act-1/2022-10-07/_posts/2022-10-07-recap.md
@@ -1,6 +1,6 @@
 ---
 title: The First Heist
-tags: session-recap
+tag: session-recap
 ---
 
 The Nameless first made their presence known by interrupting a covert handoff between a group of [Deathlands Scavengers](/wiki/factions#deathlands-scavengers) and a [Spirit Warden](/wiki/factions#spirit-wardens). 
