--- a/all_collections/story/act-1/2022-10-20/_posts/2022-10-20-recap.md
+++ b/all_collections/story/act-1/2022-10-20/_posts/2022-10-20-recap.md
@@ -1,7 +1,6 @@
 ---
 title: "Beasby's Revenge"
-date: 2022-10-20 12PM
-tags: session-recap
+tag: session-recap
 ---
 
 The Nameless's next job was given to them by [Lady Claddage](/wiki/npcs#lady-claddage), wife of private banker (and alleged embezzler) [Lord Claddage](/wiki/npcs#lord-claddage). The lady had decided that the social fallout of her husbands crimes was too extensive for her to wish to remain married to him, and so asked the Nameless to help her fake her own death. 
