--- a/all_collections/story/act-1/2022-11-03/_posts/2022-11-03-recap.md
+++ b/all_collections/story/act-1/2022-11-03/_posts/2022-11-03-recap.md
@@ -1,6 +1,6 @@
 ---
 title: Dunleavy Down
-tags: session-recap
+tag: session-recap
 ---
 
 The Nameless made enough of a mess to attract the ire of the [Spirit Wardens](/wiki/factions#spirit-wardens). Rather than wishing to go to war against an influential and elusive organization of government ghost-hunters, the Nameless agreed to frame Captain [Winslow Dunleavy](/wiki/npcs#winslow-dunleavy) (of the Leviathan Hunter *Lightning*) as a Spirit Warden himself. 
