Update Casta thread through 2/29

--- a/all_collections/story/act-7/2024-02-22/_posts/2024-02-23-signs.md
+++ b/all_collections/story/act-7/2024-02-22/_posts/2024-02-23-signs.md
@@ -1,5 +1,5 @@
 ---
-title: Signs
+title: Signs of Reckoning
 tag: fluff
 date: 2024-2-23 9AM
 ---
@@ -34,4 +34,4 @@ Orianna, Cruncho, Spud, Knuckles, and Linmer all feel it, to varying degrees of 
 
 At Pendryn manor, a crude altar to Vazara shudders and cracks down the middle.
 
-<span style="font-size: 1.5em">**"ATTEND ME"**</span>
+<span style="font-size: 1.5em">**"ATTEND ME."**</span>
