--- a/all_collections/story/act-7/2024-02-24/_posts/2024-02-25-casta.md
+++ b/all_collections/story/act-7/2024-02-24/_posts/2024-02-25-casta.md
@@ -128,3 +128,75 @@ tag: fluff
 *Casta's mockery fades as she stares with uncomfortable intentness at Sizzle. When she speaks, her tone is determinedly casual.* "So . . . in no real order . . . Seventh Tower's its own thing. Lotta hooks in the Empire's bureaucracy, I guess. Gettin' contracts an' stuff, filling orders, whatever. I'm not a money person, but . . . yeah, they're their own thing. Not part of our plans, I promise you that . . . Not that, like, you'd care.
 
 "Lugos . . . Y'all preserved the head, an' I appreciate that. Lugos was one of Viktoria an' Blighter's first big collabs, back in the day. He's . . . well, he's fuckin' terrifying, but he ain't a flexible thinker. Wasn't gonna be useful for killin' Render unless we reprogrammed him. Scurlock had an idea 'bout slowly turnin' him by talkin' 'round his programming but then the Vazara shit happened an' . . . yeah. Maybe Viktoria can fix him up soon so we can use him. But I got NO idea how he fell in with Beasby. That's just . . . weird. Like, maybe his wires got screwy when a vampire who's also got some Spirit Warden stuff in 'em came through? I dunno. Robits. Fuckin' weird man."
+
+"I don't understand how this is gonna make us any money," *complains Jammer, who has stumbled in late (as usual). She is, for once, not wearing her leather jacket, revealing a veritable tapestry of tattoos on both arms. At a glance — the crest of the Dagger Isles Expeditionary Force on a bicep, a tight, precise script that looks like contractual language curling around the underarm, a large uppercase script CASTA that has been corrected to CASTAWAY, a leviathan swallowing a tall ship, and a stylized lobster cracking a harpoon in half between its claws.* "Like, okay, we're gonna get crushed by the Emperor, sure. We all die horribly, sure. But for free?"
+
+*Casta's dander is immediately up the moment Jammer speaks.* "I mean, sure, you ain't gotta DO anything. If y'all wanna just hope an' pray that Render doesn't figure out y'all killed Breaker then fine by ME. I just figured y'all might wanna either cover your tracks or get ta suckin' his . . . HA!"
+
+*She has noticed Jammer's CASTAWAY tattoo and is momentarily overcome by giggles.*
+
+*Sizzle tilts her head, a look of genuine bewilderment on her face.* "Suck-- ?"
+
+*The [lights flicker](/story/act-7/2024-02-22/#signs-of-reckoning) once before dying completely, cutting Sizzle off mid-sentence. The silence that follows is short but eerie -- four full heartbeats utterly devoid of the familiar hum of electroplasmic current ubiquitous throughout the city.*
+
+"Eeeeeehhhh*hhhhhh*...." *Linmer shifts uneasliy.*
+
+*A muffled and slightly panicked* "FUCK!" *emanates from the other room, where Orianna and Cruncho have been engaged in whispered conversation.*
+
+*The mechanical spider wordlessly scurries back into the shadows.*
+
+“That can’t be good.” *Arkin is pulled out of his existential brooding by the lapse and automatically begins to scan the room. He didn’t hear any voice but the silence and knowledge of what’s coming makes him very nervous.*
+
+*When the lights come back up, Casta is looking at the nearest lamp. Her foot-tapping is done. She has a smirk on her face that is a hybrid grin and grimace. As she sees the reactions of the more supernaturally-inclined Nameless, she exhales slowly through her nose.*
+
+“. . . Aaaand there he is. Shit.”
+
+*She smiles weakly at anyone making eye contact.* “. . . Guess it’s time to decide how real that rebellion’s gonna be!” *She is EXTREMELY pale.*
+
+"If I thought sucking was enough to get us off this, I'd be all for it," *mutters Jammer, itching idly at a tattoo on the inside of her forearm. (This one is a small oval portrait of an angelic looking man with brown skin and flowing dark hair. He is clutching a dildo in his hands, and the frame is wrapped with the words JESUS FUCKS.) She seems not to have noticed the power flicker.* "Don't we need a god for a fake theist rebellion? Or at least some, like, priests?"
+
+*A soft grunt accompanies Quellyn as she makes herself known for the first time.* "I believe perhaps you've missed something, then. It's my fault, we've been helping Ori recover-- you have all the makings of rebellion already. She's different now. Chosen. The Vazarans are all conflicted about it-- a girl off the Crow's Foot streets and not one of their prized occultists?" 
+
+*She chuckles a bit.* "They're coming around. But no, you don't need a god. You merely have to embrace what is already transpiring all across this rotting city. It is as easy as slipping into the bath. Then the hard part comes. And I know she's got these things in her mind she can't shake. I believe the good doctor knows more than even I do," *she smirks.*
+
+"I'm sure you can scrounge up money for whatever affairs you need any day-- but consider the alternative. Power, TRUE power. Punching above your weight and grabbing everything you can take. Doesn't sound bad to me."
+
+*Jammer looks disgusted at this line of reasoning, but subsides for the time being, muttering something under her breath in Daggerite:* "Save me from true believers ... fuck me, they're always like this ..."
+
+*Arkin is nodding at Quellyn’s comments. Shortly thereafter, he turns down a quiet hallway. An observer would witness him, body language clearly upset, speaking with the robotic spider that withdrew earlier. Crisis can form the unlikeliest of alliances.*
+
+".....eeeeeEEEEEHHHH*HHHHH*--" *Linmer's voice catches in his throat, as if he only just realized that that noise was coming from him. His knuckles are white, hand gripping a vial from his bandolier.  Another hand holds an arcane implement, a ward of some sort.  Seeing that no one else is acting, though, he visibly calms himself, forcing deep, regular breaths.  He puts the vial back in the bandolier and the ward back in his cloak.*
+
+"Casta... Not to say we should do this, but... ehhhh...  what's to stop us from just cutting and running?"  *He shrinks a bit into himself, clearly ashamed for bringing it up.*  "We could just f--"  *His eyes dart to Arkin.*  "Eh, that is, we've got the resources at this point that if we wanted to, we could steal a ship and just... float out of Duskvol."
+
+*Having gotten it out, he relaxes a bit.*  "...I guess that's a question for everybody, not just Casta."
+
+"Ah! Well . . . I mean, it w- but like, I . . . hmm . . . Nah, but like, then why . . . HMMM." *Linmer's suggestion appears to have short-circuited Casta momentarily. Color returns to her cheeks, and she eyes him up speculatively.*
+
+"I mean . . . yeah, runnin's about the same as guilt, so Render'd try ta hunt ya down, an' I GUESS that's sorta like havin' a rebellion ta focus on . . . Yeah . . . Yeah, that could work! I mean, y'all'd have ta leave everythin' behind but, y'know, take it from me, it ain't like ya NEED as much as ya think ya do . . . Yeah . . . Yeah, that might actually work!"
+
+*As she speaks, she becomes more animated as she talks herself into the idea. A modicum of hope appears to filter back into her body language as the prospect of running takes hold of her imagination. Linmer rotates through expressions of confusion, guilt, worry, surprise, pride.*
+
+"Yeah, maybe you *should* run, Casta." *Sizzle stands up, re-holstering the revolver she had reflexively drawn in the darkness. Her next words are spoken in a carefully measured tone.* "Draw the heat your way, just like ya planned, right? Y'all can play your games with th' Immortal Emperor an' Render somewhere else, an' leave the rest of us alone."
+
+*She stalks to one of the windows, pulling back the tattered curtain slightly to peek out over Six Towers.* "I ain't leavin', though," *she says softly.* "I *like* this city. An' I don't travel as light 's I used to."
+
+*In the distance, a careful listener would hear large waves starting to crash on the bank of the Dusk River.*
+
+“I’m not going either. Not yet at least.” *Arkin has returned to the larger group. The spider is nowhere to be seen but is likely still around.*
+
+“Look, we might have to cut and run someday. And if we do, I have a few ideas. But not yet. Running is admitting our guilt. And nobody knows that we’re the guilty party. Yet. Until we actually have a plan to take Render out, we need to buy time and resources. Which means casting the blame elsewhere.”
+
+*Arkin turns to face the rest of the group. His eyes are unusually animated for discussing something non-robotic in nature.*
+
+“Render is the strongest single entity we’ve ever faced. He could kill us all easily in a fair fight. But there is no way in hell that we’re going to give him one. He has no idea how this city works. He’s a general of an age of legends. He’s been living in bureaucratic hell for centuries. And we’re the mother-fucking Nameless. We run Six Towers. We’re a respectable entertainment company with ties to the community. Why would we ever commit treason?”
+
+“No, we need to stay, biding our time until Render’s attention and energy is consumed elsewhere. And then, then we strike.”
+
+"I..." *Linmer hesitates, looking pensive.* "I need to think about this.  I don't think we should all hop in life boats before the ship is even sinking, but..." *He wrings his hands and cringes in on himself. After a moment, he firms up, straightening his back and raising his eyes.*
+
+"As long as I can be of help to the crew, I will.  I don't know how we can possibly stand a chance against this Render or the Immortal Fool, but we aren't going to find out on the sea."
+
+*Under his breath, he wheezes,* " ...as much as I wish we could." 
+
+“That’s the spirit, Linmer. We can’t do it without you!” *Arkin pats Linmer on the shoulder, probably slightly too hard.*
